[package]
name = "function_calls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
borsh = "0.9.3"
borsh-derive = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
